Fix z-index on giantfox

--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -183,7 +183,6 @@ h2 {
     height: 700px;
     background: url(/media/img/firefox/partners/firefoxos-giantfox-back.png) no-repeat 0 0 ;
     position: absolute;
-    z-index: 40;
     top: 140px;
     left: 50%;
     margin-left: -70px;
@@ -191,9 +190,9 @@ h2 {
     #giantfox-foreground {
         position: absolute;
         display: block;
-        top: 0px;
-        left: 0;
-        width: 900px;
+        top: 0;
+        right: 0;
+        width: 469px;
         height: 700px;
         background: url(/media/img/firefox/partners/firefoxos-giantfox-front.png) no-repeat 100% 130px;
         z-index: 110;
